--- a/public/css/style.css
+++ b/public/css/style.css
@@ -73,7 +73,7 @@ li {
 	height: 4rem;
 	align-items: center;
 	padding: 0 3rem .5rem 3rem;
-	margin-bottom: 3rem;
+	/*margin-bottom: 3rem;*/
 	background-color: #f6f6f6;
 }
 
